chore(build): Disable preview features again