@@ -63,7 +63,6 @@ subprojects {
 
   tasks.withType<Test> {
     useJUnitPlatform()
-    jvmArgs("--enable-preview")
     testLogging {
       events("started", "passed", "skipped", "failed")
     }
@@ -75,7 +74,6 @@ subprojects {
     // options
     options.encoding = "UTF-8"
     options.isIncremental = true
-    options.compilerArgs.add("--enable-preview")
   }
 /*
   tasks.withType<Javadoc>() {
